<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FoodDetailFragment">

    <ImageView
        android:id="@+id/foodImageViewIdAtFoodDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minHeight="200dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher_round"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/txtFoodNameIdAtFoodDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foodImageViewIdAtFoodDetail"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/default_food_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/txtFoodCalorieIdAtFoodDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFoodNameIdAtFoodDetail"
        android:textSize="18sp"
        android:text="@string/default_food_calorie"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/txtFoodCarbohydrateIdAtFoodDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFoodCalorieIdAtFoodDetail"
        android:textSize="18sp"
        android:text="@string/default_food_carbohydrate"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/txtFoodProteinIdAtFoodDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFoodCarbohydrateIdAtFoodDetail"
        android:textSize="18sp"
        android:text="@string/default_food_protein"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/txtFoodFatIdAtFoodDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFoodProteinIdAtFoodDetail"
        android:textSize="18sp"
        android:text="@string/default_food_fat"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    </RelativeLayout>
</layout>